# phonetisaurus-g2p-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  phonetisaurus_g2p.rs
tests/: model.fst  phonemization_test.rs
